--- a/web/src/main/resources/open-api/server/users-api.yaml
+++ b/web/src/main/resources/open-api/server/users-api.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: User microservice
-  version: 1.0.8
+  version: 1.0.9
 paths:
   /signup:
     post:
@@ -208,6 +208,10 @@ components:
           type: string
     SignupRequest:
       type: object
+      required:
+        - email
+        - password
+        - confirmPassword
       properties:
         email:
           type: string
