--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -1,11 +1,10 @@
 logging:
   level:
-    root: INFO
-    org.springframework.web: INFO
+    root: DEBUG
+    org.springframework.web: DEBUG
     org.hibernate: DEBUG
     com.zaxxer.hikari.HikariConfig: DEBUG
     com.zaxxer.hikari: TRACE
-
 
 management:
   server:
