Add Mail Service
Mail will be sent after user registration

--- a/web/src/test/resources/application-test.yaml
+++ b/web/src/test/resources/application-test.yaml
@@ -31,3 +31,10 @@ logging:
 eureka:
   client:
     enabled: false
+
+mail:
+  smtp:
+    host: smtp-domain
+    port: 587
+    username: smtp-user
+    password: smtp-password
