--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
             <repositories>
                 <repository>
                     <id>github</id>
-                    <url>https://maven.pkg.github.com/digilinq/stdlib</url>
+                    <url>https://maven.pkg.github.com/digilinq/uv</url>
                     <snapshots>
                         <enabled>true</enabled>
                     </snapshots>
