--- a/web/pom.xml
+++ b/web/pom.xml
@@ -112,6 +112,11 @@
             <groupId>com.eightbits.shared</groupId>
             <artifactId>stdlib</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
