--- a/web/src/main/resources/application.yaml
+++ b/web/src/main/resources/application.yaml
@@ -35,53 +35,8 @@ springdoc:
 spring:
   application:
     name: users
-
----
-spring:
-  config:
-    activate:
-      on-profile: prd
-  datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?currentSchema=users
-    username: ${POSTGRES_USERNAME}
-    password: ${POSTGRES_PASSWORD}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-eureka:
-  instance:
-    hostname: users
-    non-secure-port: 8080
-  client:
-    service-url:
-      defaultZone: http://eureka-discovery-service:8761/eureka/
----
-spring:
-  config:
-    activate:
-      on-profile: local
-  datasource:
-    url: jdbc:postgresql://localhost:5432/infinite_tech?currentSchema=users
-    username: infinite_tech
-    password: NPXkk0xUTJCfnrAR
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: true
-eureka:
-  client:
-    enabled: false
+...
+# Docker
 ---
 spring:
   config:
@@ -100,4 +55,4 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
----
+...
