--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
         <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
         <maven-deploy-plugin.version>3.1.1</maven-deploy-plugin.version>
         <maven-enforcer-plugin.version>3.3.0</maven-enforcer-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0</maven-failsafe-plugin.version>
+        <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
         <maven-help-plugin.version>3.4.0</maven-help-plugin.version>
         <maven-install-plugin.version>3.1.1</maven-install-plugin.version>
         <maven-invoker-plugin.version>3.5.1</maven-invoker-plugin.version>
@@ -54,6 +54,11 @@
 
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok.version>1.18.28</lombok.version>
+
+        <!-- Integration Tests -->
+        <skipTests>false</skipTests>
+        <skipITs>false</skipITs>
+        <testGroups>IntegrationTests</testGroups>
     </properties>
 
     <modules>
@@ -162,8 +167,24 @@
                             </goals>
                         </execution>
                     </executions>
+<!--                    <configuration>-->
+<!--                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>-->
+<!--                    </configuration>-->
                     <configuration>
-                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                        <failIfNoTests>false</failIfNoTests>
+                        <skipTests>${skipTests}</skipTests>
+                        <skipITs>${skipITs}</skipITs>
+                        <groups>${testGroups}</groups>
+                        <runOrder>random</runOrder>
+                        <includes>
+                            <include>**/*IT.kt</include>
+                            <include>**/*IT.java</include>
+                        </includes>
+                        <properties>
+                            <configurationParameters>
+                                junit.jupiter.extensions.autodetection.enabled = true
+                            </configurationParameters>
+                        </properties>
                     </configuration>
                 </plugin>
             </plugins>
@@ -194,6 +215,10 @@
                         </compilerArg>
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
