--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -19,6 +19,6 @@ jobs:
           java-version: 17
           distribution: 'temurin'
           cache: maven
-      - run: pwd
-      - run: ls -la1
+      - name: Build maven project with no integration tests
+        run: mvn package
 
