--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -18,7 +18,17 @@ jobs:
         with:
           java-version: 17
           distribution: 'temurin'
-          cache: maven
+#          cache: maven
       - name: Build maven project with no integration tests
         run: mvn --batch-mode --update-snapshots package
 
+#  SecondBuild:
+#    name: Second build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-java@v3
+#        with:
+#          java-version: 17
+#          distribution: 'temurin'
+#          cache: maven
