--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -35,6 +35,8 @@ jobs:
   create-docker-image:
     name: Create docker image
     runs-on: ubuntu-latest
+    needs:
+      - build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v3
