--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -42,4 +42,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Package
-      - run: ls
+      - name: Print event name
+        run: echo "The event name is ${{ github.event_name }}"
+      - name: Login to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
