--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -46,6 +46,8 @@ jobs:
           name: Package
       - name: Print event name
         run: echo "The event name is ${{ github.event_name }}"
+      - name: Print docker hub password
+        run: echo "The docker hub password is ${{ secrets.DOCKER_HUB_PASSWORD }}"
       - name: Login to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
