--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -9,6 +9,7 @@ env:
   REGISTRY: ${{ vars.CONTAINER_REGISTRY }}
   USERNAME: ${{ vars.DOCKER_HUB_USERNAME }}
   PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  PACKAGE: ${{ vars.PACKAGE_NAME }}
 jobs:
   build:
     name: Build maven project
@@ -47,8 +48,6 @@ jobs:
           name: Package
       - name: Print event name
         run: echo "The event name is ${{ github.event_name }}"
-      - name: Print docker hub password
-        run: echo "The docker hub password is ${{ env.PASSWORD }}"
       - name: Login to Container Registry
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
@@ -63,11 +62,11 @@ jobs:
           images: |
             ${{ env.REGISTRY }}/${{ env.USERNAME }}/${{ env.PACKAGE }}
           tags: |
-            type=semver,pattern={{version}},value=${{ inputs.version }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
-            type=semver,pattern={{major}},value=${{ inputs.version }}
-            type=ref,event=branch,suffix=-{{ sha }}
+#            type=semver,pattern={{version}},value=${{ inputs.version }}
+#            type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
+#            type=semver,pattern={{major}},value=${{ inputs.version }}
+#            type=ref,event=branch,suffix=-{{ sha }}
             type=ref,event=pr
-            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
+#            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
           flavor: |
             latest=true
