metadata latest=false

--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -69,4 +69,4 @@ jobs:
             type=ref,event=pr
 #            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/') }}
           flavor: |
-            latest=true
+            latest=false
