--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -5,6 +5,10 @@ on:
     branches:
       - '*'
       - '*/*'
+      - '!main'
+  pull_request:
+    branches:
+      - main
 env:
   REGISTRY: ${{ vars.CONTAINER_REGISTRY }}
   USERNAME: ${{ vars.DOCKER_HUB_USERNAME }}
@@ -66,3 +70,4 @@ jobs:
             type=semver,pattern={{major}}.{{minor}},value=${{ inputs.version }}
             type=semver,pattern={{major}},value=${{ inputs.version }}
             type=ref,event=branch,suffix=-{{ sha }}
+            type=ref,event=pr
