--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -71,3 +71,5 @@ jobs:
             type=semver,pattern={{major}},value=${{ inputs.version }}
             type=ref,event=branch,suffix=-{{ sha }}
             type=ref,event=pr
+          flavor: |
+            latest=auto
