--- a/.github/workflows/lazy-computing-reusable-workflows.yaml
+++ b/.github/workflows/lazy-computing-reusable-workflows.yaml
@@ -5,4 +5,4 @@ on:
       - 'feature/*'
 jobs:
   build-maven-project:
-    uses: digilinq/reusable-workflows/.github/workflows/build.yaml@t1
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t1
