Print SLACK_MESSAGE

--- a/.github/workflows/lazy-computing-reusable-workflows.yaml
+++ b/.github/workflows/lazy-computing-reusable-workflows.yaml
@@ -27,7 +27,7 @@ jobs:
           SLACK_MESSAGE: ${{join(steps.run_tests.outputs.*, '\n')}}
           SLACK_TITLE: CI Test Suite
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-        run: echo ${{ SLACK_MESSAGE }}
+        run: echo $SLACK_MESSAGE
 
 
   build:
