--- a/.github/workflows/lazy-computing-reusable-workflows.yaml
+++ b/.github/workflows/lazy-computing-reusable-workflows.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Load project config
         id: load_project_config
-        run: echo "config=$(jq '.' '.github/project-config.json')" >> "$GITHUB_OUTPUT"
+        run: echo "config=$(jq -c '.' '.github/project-config.json')" >> "$GITHUB_OUTPUT"
       - name: Check event name
         id: event
         run: echo "event_name=${{ github.event_name }}" >> "$GITHUB_OUTPUT"
