Use reusable project config

--- a/.github/workflows/lazy-computing-reusable-workflows.yaml
+++ b/.github/workflows/lazy-computing-reusable-workflows.yaml
@@ -4,6 +4,9 @@ on:
     branches:
       - 'feature/*'
 jobs:
+  extract-config:
+    uses: digilinq/reusable-workflows/.github/actions/project-configuration.yaml@t4
+
   config:
     runs-on: ubuntu-latest
     outputs:
