--- a/.github/workflows/lazy-computing-reusable-workflows.yaml
+++ b/.github/workflows/lazy-computing-reusable-workflows.yaml
@@ -5,7 +5,7 @@ on:
       - 'feature/*'
 jobs:
   extract-config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t8
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t10
 
   print-extracted-config:
     needs:
@@ -13,7 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print extracted config
-        run: echo ${{ needs.extract-config.outputs.config }}
+        run: |
+          echo ${{ needs.extract-config.outputs.config }}
+          echo ${{ needs.extract-config.outputs.java-version }}
 
   config:
     runs-on: ubuntu-latest
