Build project using build workflow

--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -13,10 +13,10 @@ env:
   PACKAGE: ${{ vars.PACKAGE_NAME }}
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t1
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t2
 
-  build1:
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t1
+  build:
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t2
     needs:
       - config
     with:
@@ -24,38 +24,44 @@ jobs:
       ref: ${{ github.ref }}
       java-version: ${{ needs.config.outputs.java-version }}
       maven-version: ${{ needs.config.outputs.maven-version }}
+      artifact-name: 'Package'
+      artifact-path: 'web/target/*.jar'
+      docker-file: 'deployment/Dockerfile'
+      artifact:
+        name: 'Package'
 
-  build:
-    name: Build maven project
-    runs-on: ubuntu-latest
-    needs:
-      - config
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v4
-      - name: Setup JDK ${{ needs.config.outputs.java-version }}
-        uses: actions/setup-java@v3
-        with:
-          java-version: ${{ needs.config.outputs.java-version }}
-          distribution: 'temurin'
-          cache: maven
-      - name: Build maven project with no integration tests
-        run: mvn --batch-mode --update-snapshots package
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Copy artifact and docker file
-        run: | 
-          mkdir staging && cp web/target/*.jar staging
-          cp deployment/Dockerfile staging
-      - name: Upload artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: Package
-          path: staging
+#  build:
+#    name: Build maven project
+#    runs-on: ubuntu-latest
+#    needs:
+#      - config
+#    steps:
+#      - name: Checkout the code
+#        uses: actions/checkout@v4
+#      - name: Setup JDK ${{ needs.config.outputs.java-version }}
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: ${{ needs.config.outputs.java-version }}
+#          distribution: 'temurin'
+#          cache: maven
+#      - name: Build maven project with no integration tests
+#        run: mvn --batch-mode --update-snapshots package
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Copy artifact and docker file
+#        run: |
+#          mkdir staging && cp web/target/*.jar staging
+#          cp deployment/Dockerfile staging
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: Package
+#          path: staging
   create-docker-image:
     name: Create docker image
     runs-on: ubuntu-latest
     needs:
+      - config
       - build
     steps:
       - name: Download artifact
