--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -13,11 +13,11 @@ env:
   PACKAGE: ${{ vars.PACKAGE_NAME }}
 jobs:
   config:
-    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t3
+    uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t4
 
   build:
-    name: Build Maven project
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t3
+    name: build
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t4
     needs:
       - config
     with:
