--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -21,7 +21,7 @@ jobs:
     needs:
       - config
     with:
-      runner: ubuntu-latest
+      runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
       java-version: ${{ needs.config.outputs.java-version }}
       maven-version: ${{ needs.config.outputs.maven-version }}
@@ -31,20 +31,20 @@ jobs:
 
   create-docker-image-1:
     name: Create docker image
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t9
     needs:
       - config
       - build
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t9
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      container-registry: ${{ env.REGISTRY }}
+#      container-registry: ${{ env.REGISTRY }}
 #      username: ${{ env.USERNAME }}
 #      password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
   create-docker-image:
     name: Create docker image
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
     needs:
       - config
       - build
