--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -29,15 +29,15 @@ jobs:
       artifact-path: 'web/target/*.jar'
       docker-file: 'deployment/Dockerfile'
 
-  create-docker-image-1:
-    name: Create docker image
-    needs:
-      - config
-      - build
-    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t9
-    with:
-      runner: 'ubuntu-latest'
-      artifact-name: 'Package'
+#  create-docker-image-1:
+#    name: Create docker image
+#    needs:
+#      - config
+#      - build
+#    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t9
+#    with:
+#      runner: 'ubuntu-latest'
+#      artifact-name: 'Package'
 #      container-registry: ${{ env.REGISTRY }}
 #      username: ${{ env.USERNAME }}
 #      password: ${{ secrets.DOCKER_HUB_PASSWORD }}
