--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -17,9 +17,9 @@ jobs:
 
   build:
     name: build
-    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t9
     needs:
       - config
+    uses: digilinq/reusable-workflows/.github/workflows/build-maven-project.yaml@t9
     with:
       runner: 'ubuntu-latest'
       ref: ${{ github.ref }}
@@ -29,12 +29,12 @@ jobs:
       artifact-path: 'web/target/*.jar'
       docker-file: 'deployment/Dockerfile'
 
-#  create-docker-image-1:
-#    name: Create docker image
-#    needs:
-#      - config
-#      - build
-#    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t9
+  create-docker-image-1:
+    name: Create docker image
+    needs:
+      - config
+      - build
+    uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t10
 #    with:
 #      runner: 'ubuntu-latest'
 #      artifact-name: 'Package'
