Use variables as a parameter in reusable workflow

--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -38,7 +38,7 @@ jobs:
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      container-registry: ${{ env.REGISTRY }}
+      container-registry: ${{ vars.CONTAINER_REGISTRY }}
 #      username: ${{ env.USERNAME }}
 #      password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
