Remove undefined parameter docker-image

--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -38,7 +38,7 @@ jobs:
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      docker-image: ${{ needs.config.outputs.docker-image }}
+#      docker-image: ${{ needs.config.outputs.docker-image }}
       container-registry: ${{ vars.CONTAINER_REGISTRY }}
 #      cr-username: ${{ vars.DOCKER_HUB_USERNAME }}
 #      image-name: ${{ vars.PACKAGE_NAME }}
