--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -57,9 +57,9 @@ jobs:
             '{KEY1: $k1, KEY2: $k2, KEY3: $k3}')
           echo "JSON_STRING=$JSON_STRING" >> $GITHUB_ENV
         env:
-          KEY1: 'value1'
-          KEY2: 'value2'
-          KEY3: 'value3'
+          KEY1: value1
+          KEY2: value2
+          KEY3: value3
 
       - name: Output JSON
         run: echo "$JSON_STRING"
