--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -50,8 +50,9 @@ jobs:
     steps:
       - name: Convert Key-Value Pairs to JSON
         run: |
-          JSON_STRING=$(jq -n --arg k1 VKEY1 --arg k2 VKEY2 --arg k3 VKEY3 '{KEY1: $k1, KEY2: $k2, KEY3: $k3}')
+          echo "{KEY1: $k1, KEY2: $k2, KEY3: $k3}"    
           echo "JSON_STRING=$JSON_STRING" >> $GITHUB_ENV
+      #          JSON_STRING=$(jq -n --arg k1 VKEY1 --arg k2 VKEY2 --arg k3 VKEY3 '{KEY1: $k1, KEY2: $k2, KEY3: $k3}')
 
       - name: Output JSON
         run: echo "$JSON_STRING"
