--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -30,32 +30,39 @@ jobs:
       artifact-path: 'web/target/*.jar'
       docker-file: 'deployment/Dockerfile'
 
+  docker-image-name:
+    name: Set docker image name
+    runs-on: ubuntu-latest
+    id: docker-image-name
+    outputs:
+      docker-image: ${{ steps.convert-to-json.outputs.docker-image }}
+    steps:
+      - name: Set docker image properties
+        id: docker-image
+        run: |
+          echo "registry=${{ env.REGISTRY }}" >> $GITHUB_OUTPUT
+          echo "owner=${{ env.USERNAME }}" >> $GITHUB_OUTPUT
+          echo "image-name=${{ env.PACKAGE }}" >> $GITHUB_OUTPUT
+      - name: Convert to JSON
+        id: convert-to-json
+        run: |
+          echo "docker-image=${{ toJSON(steps.docker-image.outputs) }}" >> $GITHUB_OUTPUT
+#          echo "echo $(jq -n --arg registry $(cat registry) --arg owner $(cat owner) --arg image-name $(cat image-name) '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
+
   create-docker-image-1:
     name: Create docker image
     needs:
       - config
       - build
+      - docker-image-name
     uses: digilinq/reusable-workflows/.github/workflows/create-docker-image.yaml@t16
     with:
       runner: 'ubuntu-latest'
       artifact-name: 'Package'
-      docker-image: ${{ needs.config.outputs.docker-image }}
+      docker-image: ${{ needs.docker-image-name.outputs.docker-image }}
       container-registry: ${{ vars.CONTAINER_REGISTRY }}
     secrets:
       container-registry-password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-  docker:
-    name: Docker
-    runs-on: 'ubuntu-latest'
-    steps:
-      - name: Convert Key-Value Pairs to JSON
-        run: |
-          echo "{}"    
-          echo "JSON_STRING=$JSON_STRING" >> $GITHUB_ENV
-      #          JSON_STRING=$(jq -n --arg k1 VKEY1 --arg k2 VKEY2 --arg k3 VKEY3 '{KEY1: $k1, KEY2: $k2, KEY3: $k3}')
-
-      - name: Output JSON
-        run: echo "$JSON_STRING"
 
   create-docker-image:
     name: Create docker image
