--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -45,7 +45,8 @@ jobs:
       - name: Convert to JSON
         id: convert-to-json
         run: |
-          echo "docker-image=${{ toJSON(steps.docker-image.outputs) }}" >> $GITHUB_OUTPUT
+          echo "${{ toJSON(steps.docker-image.outputs) }}"
+          echo "docker-image=NONE" >> $GITHUB_OUTPUT
 #          echo "echo $(jq -n --arg registry $(cat registry) --arg owner $(cat owner) --arg image-name $(cat image-name) '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
 
   create-docker-image-1:
