--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -47,6 +47,7 @@ jobs:
         run: |
           echo "${{ toJSON(steps.docker-image.outputs) }}" > foo.json
           cat foo.json
+          jq -c '.' foo.json
 
 #          echo "docker-image=${{ toJSON(steps.docker-image.outputs) }}" | jq -c >> $GITHUB_OUTPUT
 #          echo "echo $(jq -n --arg registry $(cat registry) --arg owner $(cat owner) --arg image-name $(cat image-name) '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
