--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -45,12 +45,8 @@ jobs:
       - name: Convert to JSON
         id: convert-to-json
         run: |
-          echo "${{ toJSON(steps.docker-image.outputs) }}" > foo.json
-          cat foo.json
-          jq -c '.' foo.json
-
-#          echo "docker-image=${{ toJSON(steps.docker-image.outputs) }}" | jq -c >> $GITHUB_OUTPUT
-#          echo "echo $(jq -n --arg registry $(cat registry) --arg owner $(cat owner) --arg image-name $(cat image-name) '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
+          echo "${{ toJSON(steps.docker-image.outputs) }}"
+          echo "docker-image=$(jq -n --arg registry docker --arg owner user --arg image-name users '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
 
   create-docker-image-1:
     name: Create docker image
