--- a/.github/workflows/lazy-computing-build.yaml
+++ b/.github/workflows/lazy-computing-build.yaml
@@ -13,6 +13,28 @@ env:
   PACKAGE: ${{ vars.PACKAGE_NAME }}
 
 jobs:
+
+  job1:
+    runs-on: ubuntu-latest
+    outputs:
+      output_1: ${{ steps.gen_output.outputs.output_1 }}
+      output_2: ${{ steps.gen_output.outputs.output_2 }}
+      output_3: ${{ steps.gen_output.outputs.output_3 }}
+    strategy:
+      matrix:
+        version: [ 1, 2, 3 ]
+    steps:
+      - name: Generate output
+        id: gen_output
+        run: |
+          version="${{ matrix.version }}"
+          echo "output_${version}=${version}" >> "$GITHUB_OUTPUT"
+  job2:
+    runs-on: ubuntu-latest
+    needs: [ job1 ]
+    steps:
+      - run: echo '${{ toJSON(needs.job1.outputs) }}'
+
   config:
     uses: digilinq/reusable-workflows/.github/workflows/project-configuration.yaml@t16
 
@@ -46,7 +68,7 @@ jobs:
         id: convert-to-json
         run: |
           echo "${{ toJSON(steps.docker-image.outputs) }}"
-          echo "docker-image=$(jq -n --arg registry docker --arg owner user --arg image-name users '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
+#          echo "docker-image=$(jq -n --arg registry docker --arg owner user --arg image-name users '{\"registry\":$registry,\"owner\":$owner,\"image-name\":$image-name}')" >> $GITHUB_OUTPUT
 
   create-docker-image-1:
     name: Create docker image
